@@ -1,14 +1,14 @@
 #############################################################################
 # Makefile for building: Cuberok
-# Generated by qmake (2.01a) (Qt 4.3.1) on: ?? 31. ??? 11:18:55 2008
+# Generated by qmake (2.01a) (Qt 4.3.1) on: ?? 7. ??? 17:19:20 2008
 # Project:  Cuberok.pro
 # Template: subdirs
-# Command: c:\Qt\4.3.1\bin\qmake.EXE -win32 -o Makefile.win Cuberok.pro
+# Command: c:\Qt\4.3.1\bin\qmake.exe -win32 -o Makefile.win Cuberok.pro
 #############################################################################
 
 first: make_default
 MAKEFILE      = Makefile.win
-QMAKE         = c:\Qt\4.3.1\bin\qmake.EXE
+QMAKE         = c:\Qt\4.3.1\bin\qmake.exe
 DEL_FILE      = del
 CHK_DIR_EXISTS= if not exist
 MKDIR         = mkdir
